# OpenEnv-Self-Improver

./: .gitignore  Dockerfile  README.md  TRAINING.md  __init__.py  blog.md  eval_local.py  grpo_args.txt  launch_hf_training.py  math_client.py  openenv.yaml  pyproject.toml  test_api.py  test_code_api.py  test_negotiate_api.py  test_pydantic.py  train.py  train_code_mps.py  train_llm_mps.py  train_local_cpu.py  train_math_improved.ipynb  train_math_llm.ipynb  train_math_llm_colab.ipynb  train_negotiate_mps.py  verify_math_model.py  verify_training_setup.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EnvironmentCard.jsx
hf_training_job/: Dockerfile  README.md  app.py  requirements.txt  train_worker.py
openenv_math_escalation.egg-info/: PKG-INFO  SOURCES.txt
openenv_self_improver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scratch/: check_routes.py
server/: __init__.py  app.py  coding_environment.py  math_environment.py  negotiation_environment.py  oracle.py
