# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-self-improver"
version = "0.1.0"
description = "Self-Improving Adaptive RL Suite for OpenEnv - Meta Hackathon Theme #4"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
]
train = [
    "trl>=0.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "matplotlib>=3.10.9",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m math_escalation.server.app
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
